[package]
name = "impl-tools"
version = "0.10.2"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Helper macros: autoimpl"
keywords = ["proc-macro", "macro", "derive", "trait", "procedural"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/kas-gui/impl-tools"
readme = "README.md"
documentation = "https://docs.rs/impl-tools/"
rust-version = "1.61.0"

[lib]
proc-macro = true

[dependencies.proc-macro-error2]
version = "2.0"
default-features = false

[dependencies.syn]
version = "2.0.0"

[dependencies.impl-tools-lib]
version = "0.11.0"
path = "lib"

[dev-dependencies]
doc-comment = "0.3.3"
twox-hash = "1.6.3"

[build-dependencies]
autocfg = "1.1.0"

[workspace]
members = ["lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rustc_1_65)', 'cfg(mock_feature)'] }
