[workspace]
members = ["lib"]

[workspace.package]
authors = ["Diggory Hardy <git@dhardy.name>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kas-gui/impl-tools"
rust-version = "1.65.0"
edition = "2021"

[package]
name = "impl-tools"
version = "0.11.2"
description = "Helper macros: autoimpl"
keywords = ["proc-macro", "macro", "derive", "trait", "procedural"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
documentation = "https://docs.rs/impl-tools/"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies.proc-macro-error2]
version = "2.0"
default-features = false

[dependencies.syn]
version = "2.0.0"

[dependencies.impl-tools-lib]
version = "0.11.1"
path = "lib"

[dev-dependencies]
doc-comment = "0.3.3"
twox-hash = "1.6.3"
trybuild = "1.0.90"

[build-dependencies]
autocfg = "1.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mock_feature)'] }
