[package]
name = "impl-tools-lib"
version = "0.10.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Helper macros: autoimpl"
keywords = ["derive", "trait"]
repository = "https://github.com/kas-gui/impl-tools"
readme = "README.md"
documentation = "https://docs.rs/impl-tools-lib/"
rust-version = "1.61.0"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.proc-macro-error2]
version = "2.0"
default-features = false

[dependencies.syn]
version = "2.0.0"
# We need 'extra-traits' for equality testing
# We need 'full' for parsing macros within macro arguments
features = ["extra-traits", "full", "visit", "visit-mut"]
