[package]
name = "impl-tools-lib"
version = "0.11.1"
edition = "2021"
description = "Helper macros: autoimpl"
keywords = ["derive", "trait"]
readme = "README.md"
documentation = "https://docs.rs/impl-tools-lib/"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.proc-macro-error2]
version = "2.0"
default-features = false

[dependencies.syn]
version = "2.0.0"
# We need 'extra-traits' for equality testing
# We need 'full' for parsing macros within macro arguments
features = ["extra-traits", "full", "visit", "visit-mut"]

[lints.clippy]
needless_lifetimes = "allow"
